--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,137 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Kullanıcı listesi ve adi</h1>
+
+    <div class="container">
+        <!-- Header alanı burası -->
+        <div class="row text-center" >
+            <h1 class="title-center">ÜRÜN İŞLEMLERİ SAYFAASI</h1>
+        </div>
+        <!-- Header end -->
+
+        <!-- Body alanı-->
+        <div class="row">
+            <div class="col-md-1"></div>
+            <!-- Menü Alani-->
+            <div class="col-md-2">
+                <ul class="navbar-nav mt-4" >
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Ürün Eklemek</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Ürün Listeleme</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Ürün Stok Takip</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " aria-current="page" href="#">Firma Tanımlama</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Menü Alan Bitiş-->
+
+
+            <!-- Ürün Bilgi ve Tablo olani-->
+            <div class="col-md-9">
+                <!-- Ürün Bilgi alani-->
+                <div class="row">
+                    <!-- veri girişi-->
+                    <div class="col-md-8">
+                        <div class="mb3">
+                            <label for="id" class="form-label"></label>
+                            <input type="text" class="form-control" id="id" name="id">    <!-- id bilgisi entityde olan isim-->
+                        </div>
+                        <div class="mb3">
+                            <label for="ad" class="form-label"></label>
+                            <input type="text" class="form-control" id="ad" name="ad" required>    <!-- ad bilgisi entityde olan isim-->
+                        </div>
+                        <div class="mb3">
+                            <label for="fiyat" class="form-label"></label>
+                            <input type="text" class="form-control" id="fiyat" name="fiyat" required>    <!-- fiyat bilgisi entityde olan isim-->
+                        </div>
+                        <div class="mb3">
+                            <label for="barkod" class="form-label"></label>
+                            <input type="text" class="form-control" id="barkod" name="barkod" required>    <!-- barkod bilgisi entityde olan isim-->
+                        </div>
+                        <div class="mb3">
+                            <label for="kdv" class="form-label" name="kdv"></label>
+                            <select name="kdv" id="kdv" class="form-control">
+                                <option >Seçiniz</option>
+                                <option value="1">%1</option>
+                                <option value="3">%3</option>
+                                <option value="5">%5</option>
+                                <option value="8">%8</option>
+                                <option value="18">%18</option>
+                            </select>
+                        </div>
+
+                        
+                        
+                        
+                        
+                    </div>
+                    <div class="col-4 text-center">
+                        <img class="mt-4" src="/img/blank.jpg" alt="ürün resmi burada olacak" width="280" height="280">
+                    </div>
+
+                <div class="col-md-12 d-grid mt-2" >
+                    <button class="btn-btn primary">KAYDET</button>
+                </div>
+
+                </div>
+                <!-- Ürün Bilgi alani bitiş-->
+                <!-- Tablo Bilgi alani-->
+                <div class="row">
+
+
+                    <table>
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+
+
+
+
+
+                </div>
+                <!-- Ürün Bilgi alani bitiş-->
+            </div>
+            <!-- Ürün Bilgi ve Tablo olani bitiş-->
+
+        </div>
+        <!-- Body end-->
+
+
+    </div>
+
+
+
+<script !src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
