--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Product</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -74,11 +74,6 @@
                                 <option value="18">%18</option>
                             </select>
                         </div>
-
-                        
-                        
-                        
-                        
                     </div>
                     <div class="col-4 text-center">
                         <img class="mt-4" src="/img/blank.jpg" alt="ürün resmi burada olacak" width="280" height="280">
@@ -91,30 +86,39 @@
                 </div>
                 <!-- Ürün Bilgi alani bitiş-->
                 <!-- Tablo Bilgi alani-->
-                <div class="row">
+                <div class="row mt-5">
 
 
-                    <table>
-                        <thead>
+                    <table class="table table-hover table-border">
+                        <thead class="table-secondary">
                         <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
+                            <th>ID</th>
+                            <th>Ad</th>
+                            <th>Fiyat</th>
+                            <th>Barkod</th>
+                            <th>KDV</th>
+                            <th>Resim</th>
+                            <th>İşlemler</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>0001</td>
+                            <td>Şeker</td>
+                            <td>1250₺</td>
+                            <td>012515221</td>
+                            <td>18</td>
+                            <td>
+                                <img src="/img/bos.png" alt="urun resmi" width="50" height="50">
+                            </td>
+                            <td>
+                                <a href="#" class="btn btn-primary">
+                                    Düzenle
+                                </a>
+                                <a href="#" class="btn btn-danger">
+                                        Sil
+                                </a>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
