--- a/src/main/resources/templates/urun.html
+++ b/src/main/resources/templates/urun.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"  xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
 
-
-
 </head>
 <body>
 <div class="contanier">
@@ -18,7 +16,7 @@
     <div class="row text-center text-success">
         <h1 class="title-center">
             <label th:text="${model.title}"></label>
-           </h1>
+        </h1>
     </div>
     <!-- Header END      -->
     <!-- Body Alanımız       -->
@@ -69,7 +67,8 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
-                            <img class="mt-5" src="/img/blank.jpg" alt="Ürün resmi burada olacak" width="300" height="300">
+                            <img class="mt-5" src="/img/blank.jpg" alt="Ürün resmi burada olacak" width="300"
+                                 height="300">
                         </div>
                         <div class="col-md-12 d-grid mt-2">
                             <button type="submit" class="btn btn-primary">K A Y D E T</button>
@@ -105,10 +104,10 @@
                             <img src="/img/bos.PNG" alt="Ürün resmi" width="50px" height="50px">
                         </td>
                         <td>
-                            <a href="#" class="btn btn-primary">
+                            <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modelDuzenle">
                                 Düzenle
                             </a>
-                            <a href="#" class="btn btn-danger" th:attr="onclick=|sil('${urun.id}')|" >
+                            <a href="#" class="btn btn-danger" th:attr="onclick=|sil('${urun.id}')|">
                                 Sil
                             </a>
                         </td>
@@ -124,20 +123,38 @@
     <!-- Body END        -->
     <div hidden="hidden">
         <form action="delete" method="post">
-        <input type="text" name="id" id="deleteid">
-        <button type="submit" id="btndelete"></button>
+            <input type="text" name="id" id="deleteid">
+            <button type="submit" id="btndelete"></button>
         </form>
     </div>
+
+<div hidden="hidden">
+    <!-- MODAL Düzenleme Alanı    -->
+    <div class="modal fade" id="modelDuzenle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header"><h1 class="modal-title fs-5" id="exampleModalLabel">Ürün Düzenleme</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body"> ...</div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">İptal</button>
+                    <button type="button" class="btn btn-primary">Güncelle</button>
+                </div>
+            </div>
+        </div>
+    </div><!--    MODAL SONU-->
+</div>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 
-    function sil(id){
-        const deleteid= document.getElementById('deleteid');
-        const deletebutton= document.getElementById('btndelete');
-        deleteid.value=id;
+    function sil(id) {
+        const deleteid = document.getElementById('deleteid');
+        const deletebutton = document.getElementById('btndelete');
+        deleteid.value = id;
         Swal.fire({
             title: 'Are you sure?',
             text: "You won't be able to revert this!",
