--- a/src/main/resources/templates/urun.html
+++ b/src/main/resources/templates/urun.html
@@ -139,12 +139,12 @@
                 </div>
                 <div class="modal-body">
 
-                    <form action="save" method="post">
+                    <form action="update" method="post">
                         <div class="row">
                             <div class="col-md-8">
                                 <div class="mb3">
                                     <label for="id" class="form-label">Id</label>
-                                    <input type="text" class="form-control" id="g_id" name="id" disabled>
+                                    <input type="number" class="form-control" id="g_id" name="id" readonly>
                                 </div>
                                 <div class="mb3">
                                     <label for="ad" class="form-label">Ürün Adı</label>
